--- a/frontend/index.html
+++ b/frontend/index.html
@@ -29,10 +29,10 @@
     <div class="wrapper">
       <div id="menu" class="topnav">
         <ul>
-          <a href="#">Home |</a>
-          <a href="#">My Recipes |</a>
-          <a href="#">New Recipe |</a>
-          <a href="#">All Recipes </a>
+          <a href="#home">Home |</a>
+          <a href="#myRecipes">My Recipes |</a>
+          <a href="#newRecipe" id="newRecipe">New Recipe |</a>
+          <a href="#allRecipes" id="allRecipes">All Recipes </a>
 
         </ul>
       </div> <!-- sidebar -->
